# INTERACTGEN

./: .gitignore  README.md  main.py  pyproject.toml
agents/: agent_core.py  mode_professional.py  mode_researcher.py  mode_student.py
aura/: main.py  requirements.txt
aura/agents/: agent_core.py  gemini_client.py  mode_professional.py  mode_researcher.py  mode_student.py
aura/static/: script.js  styles.css
aura/templates/: index.html
aura/utils/: fetcher.py
static/: script.js  styles.css
templates/: index.html
utils/: dom_parser.py
